# kicad-gost-committers

./: .bzrignore  .gitignore  CMakeLists.txt  Doxyfile  README.txt
CMakeModules/: CheckCXXSymbolExists.cmake  CreateBzrVersionHeader.cmake  FindOpenOffice.cmake
bitmaps_png/: CMakeLists.txt
common/: CMakeLists.txt  build_version.cpp  class_plotter.cpp  common_plotPDF_functions.cpp  common_plotPS_functions.cpp  common_plotSVG_functions.cpp  dsnlexer.cpp  executable_names.cpp  filter_reader.cpp  gr_basic.cpp  kiway.cpp  richio.cpp  wildcards_and_files_ext.cpp
common/dialog_about/: AboutDialog_main.cpp
cvpcb/: cvframe.cpp  cvpcb_mainframe.cpp  cvpcb_mainframe.h  readwrite_dlgs.cpp
demos/: CMakeLists.txt
demos/GOST/: multivibrator.sch
eeschema/: CMakeLists.txt  component_references_lister.cpp  general.h  help_common_strings.h  lib_pin.h  libedit.cpp  menubar.cpp  netlist.h  pinedit.cpp  sch_component.cpp  sch_component.cpp.rej  sch_junction.cpp  sch_legacy_plugin.cpp  sch_reference_list.h  schframe.cpp  schframe.h  tool_viewlib.cpp
eeschema/BOM/: BOM_lister.h  build_BOM.cpp
eeschema/BOM/dialogs/: dialog_build_BOM.cpp  dialog_build_BOM.h
eeschema/GOST-doc-gen/: CMakeLists.txt  GOST_comp_lister.cpp  GOST_comp_lister.h  GOST_comp_manager.cpp  GOST_comp_manager.h  common_doc_iface.h  common_funcs.cpp  common_funcs.h  component.cpp  component.h  component_db.cpp  component_db.h  dictionaries.cpp  dictionaries.h  doc_common.cpp  doc_common.h  doc_common.py  doc_component_index.cpp  doc_component_index.h  doc_specification.cpp  doc_specification.h  odfpy_iface.cpp  odfpy_iface.h  odfpy_iface.py  oo_common.cxx  oo_common.hxx  oo_component_index.cxx  oo_component_index.hxx  oo_iface.cxx  oo_iface.hxx  oo_python_uno_iface.cpp  oo_python_uno_iface.h  oo_specification.cxx  oo_specification.hxx  rpc_doc_iface.cpp  rpc_doc_iface.h  uno_iface.py
eeschema/GOST-doc-gen/dialogs/: frame_GOST_doc_gen_base.cpp  frame_GOST_doc_gen_base.fbp  frame_GOST_doc_gen_base.h
eeschema/GOST-doc-gen/templates/: CompIndexFirstSheet_template.odt  CompIndexLastSheet_template.odt  CompIndexMiddleSheet_template.odt  CompsIndexMiddleSheet_template.odt  SpecificationFirstSheet_template.odt  SpecificationMiddleSheet_template.odt
eeschema/plugins/: bom2csv.xsl  bom_cvs.xsl  bom_with_title_block_2_csv.xsl
extra/pcad2kicadsch/: CMakeLists.txt  Info.plist  README.txt  pcad2kicad.cpp  pcad2kicad.h  pcad2kicad_frame.cpp  sch.cpp  sch.h  sch_arc.cpp  sch_arc.h  sch_bus.cpp  sch_bus.h  sch_common.cpp  sch_common.h  sch_component.h  sch_ieeesymbol.cpp  sch_ieeesymbol.h  sch_junction.cpp  sch_line.cpp  sch_line.h  sch_module.cpp  sch_module.h  sch_pin.cpp  sch_pin.h  sch_port.cpp  sch_port.h  sch_sheet.cpp  sch_sheet.h  sch_symbol.cpp  sch_symbol.h  sch_text.cpp  sch_text.h
extra/pcad2kicadsch/dialogs/: pcad2kicad_frame_base.cpp  pcad2kicad_frame_base.fbp  pcad2kicad_frame_base.h
include/: bitmaps.h  common.h  executable_names.h  filter_reader.h  frame_type.h  frame_type.h.moved  id.h  kiway.h  plot_common.h  richio.h  wildcards_and_files_ext.h  wxEeschemaStruct.h  wxPcbStruct.h  wxPcbStruct.h.orig
internat/: CMakeLists.txt
internat/ru/: kicad.mo  kicad.po
pcad2kicad/: CMakeLists.txt  LoadInputFile.cpp  LoadInputFile.h  PCB.cpp  PCB.h  PCBArc.cpp  PCBArc.h  PCBCallbacks.h  PCBComponent.cpp  PCBComponent.h  PCBComponents.cpp  PCBComponents.h  PCBCopperPour.cpp  PCBCopperPour.h  PCBCutout.cpp  PCBCutout.h  PCBLayersMap.h  PCBLine.cpp  PCBLine.h  PCBModule.cpp  PCBModule.h  PCBNet.cpp  PCBPad.cpp  PCBPad.h  PCBPadShape.cpp  PCBPadShape.h  PCBPolygon.cpp  PCBPolygon.h  PCBPolygonsUnit.cpp  PCBPolygonsUnit.h  PCBText.cpp  PCBText.h  PCBVia.cpp  PCBVia.h  PCBViaShape.cpp  PCBViaShape.h  ProcessXMLtoPCBUnit.cpp  ProcessXMLtoPCBUnit.h  ProcessXMLtoSchUnit.cpp  ProcessXMLtoSchUnit.h  (+86 more)
pcad2kicad/dialogs/: pcad2kicad_frame_base.cpp  pcad2kicad_frame_base.fbp  pcad2kicad_frame_base.h
pcbnew/: class_netinfo_item.cpp  files.cpp  hotkeys.cpp  hotkeys.h  hotkeys_board_editor.cpp  io_mgr.cpp  io_mgr.h  kicad_netlist_reader.cpp  legacy_netlist_reader.cpp  librairi.cpp  menubar_pcbframe.cpp  netlist_reader.h  onrightclick.cpp  pcb_netlist.h  pcbframe.cpp  pcbframe.cpp.orig  pcbnew_config.cpp  plot_brditems_plotter.cpp
pcbnew/pcad2kicadpcb_plugin/: pcad2kicad_common.cpp  pcad2kicad_common.h  pcb.cpp  pcb.h  pcb_arc.cpp  pcb_arc.h  pcb_component.cpp  pcb_component.h  pcb_line.cpp  pcb_line.h  pcb_module.cpp  pcb_module.h  pcb_pad.cpp  pcb_pad.h  pcb_polygon.cpp  pcb_polygon.h
pcbnew/pcad2kicadpcb_plugin/examples/: CK1202_V1.kicad_pcb  files.txt
scripting/: python_scripting.cpp
src/: LoadInputFileUnit.pas  PCBComponents.pas  PCBPolygonsUnit.pas  PCadToKiCad.dpr  PCadToKiCadUnit.dfm  PCadToKiCadUnit.pas  ProcessXMLToPCBUnit.pas  ProcessXMLToSCHUnit.pas  Readme  SCHComponents.pas  TextToXMLUnit.pas  XMLToObjectCommonProceduresUnit.pas  tri.c  tri.h  tri.vcproj
template/: CMakeLists.txt  kicad.pro
tools/: property_tree.cpp
